--- a/FormSampleApp/Views/FormCells/ButtonFormCell/ButtonFormCell.xib
+++ b/FormSampleApp/Views/FormCells/ButtonFormCell/ButtonFormCell.xib
@@ -1,21 +1,72 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="effra_std_bd.ttf">
+            <string>Effra-Bold</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="ButtonFormCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="ButtonFormCell" customModule="FormSampleApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="304" height="70"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                <rect key="frame" x="0.0" y="0.0" width="304" height="70"/>
+                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZLt-Gv-Sb1">
+                        <rect key="frame" x="0.0" y="0.0" width="304" height="70"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="srW-oV-jz2">
+                                <rect key="frame" x="8" y="11" width="288" height="48"/>
+                                <color key="backgroundColor" red="0.38431372549999998" green="0.31764705879999999" blue="0.83921568629999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="48" id="5iB-Id-eNe"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Effra-Bold" family="Effra" pointSize="17"/>
+                                <state key="normal" title="Giriş">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="buttonFormCellOnTap:" destination="gTV-IL-0wX" eventType="touchUpInside" id="n2u-Q8-tni"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="srW-oV-jz2" secondAttribute="trailing" constant="8" id="DnA-by-2Bd"/>
+                            <constraint firstAttribute="height" constant="70" id="FZG-9S-cOw"/>
+                            <constraint firstItem="srW-oV-jz2" firstAttribute="centerY" secondItem="ZLt-Gv-Sb1" secondAttribute="centerY" id="Qte-RS-poc"/>
+                            <constraint firstItem="srW-oV-jz2" firstAttribute="leading" secondItem="ZLt-Gv-Sb1" secondAttribute="leading" constant="8" id="gko-Ip-rhr"/>
+                            <constraint firstAttribute="width" constant="304" id="hTs-h3-kzC"/>
+                        </constraints>
+                    </view>
+                </subviews>
             </view>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstAttribute="bottom" secondItem="ZLt-Gv-Sb1" secondAttribute="bottom" id="F8w-as-uzD"/>
+                <constraint firstAttribute="trailing" secondItem="ZLt-Gv-Sb1" secondAttribute="trailing" id="G66-KE-L2o"/>
+                <constraint firstItem="ZLt-Gv-Sb1" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="T2U-YD-9eh"/>
+                <constraint firstItem="ZLt-Gv-Sb1" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="wQb-IQ-SH8"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <size key="customSize" width="304" height="70"/>
+            <connections>
+                <outlet property="btnFormCell" destination="srW-oV-jz2" id="VC0-ub-jdg"/>
+                <outlet property="heightConstraint" destination="FZG-9S-cOw" id="pG3-Zs-X9T"/>
+                <outlet property="widthConstraint" destination="hTs-h3-kzC" id="sCU-j8-oqQ"/>
+            </connections>
+            <point key="canvasLocation" x="-94" y="27"/>
         </collectionViewCell>
     </objects>
 </document>
