--- a/FormSampleApp/Views/FormCells/TextfieldFormCell/TextfieldFormCell.xib
+++ b/FormSampleApp/Views/FormCells/TextfieldFormCell/TextfieldFormCell.xib
@@ -17,42 +17,51 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="TextfieldFormCell" customModule="FormSampleApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="355" height="78"/>
+            <rect key="frame" x="0.0" y="0.0" width="355" height="98"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="355" height="78"/>
+                <rect key="frame" x="0.0" y="0.0" width="355" height="98"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="v2h-dJ-8ht">
-                        <rect key="frame" x="0.0" y="0.0" width="355" height="78"/>
+                        <rect key="frame" x="0.0" y="0.0" width="355" height="98"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Eeb-sd-4SB">
-                                <rect key="frame" x="8" y="31" width="339" height="32"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="32" id="RCG-IC-1QG"/>
-                                </constraints>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="E-Posta Adresiniz" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JBZ-PW-qwD">
-                                <rect key="frame" x="8" y="8" width="339" height="15"/>
+                                <rect key="frame" x="12" y="8" width="335" height="15"/>
                                 <fontDescription key="fontDescription" name="Effra-Regular" family="Effra" pointSize="12"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QFy-z8-4TL">
+                                <rect key="frame" x="8" y="31" width="339" height="37"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="asdasd" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Eeb-sd-4SB">
+                                        <rect key="frame" x="8" y="8" width="323" height="21"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" name="Effra-Regular" family="Effra" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="Eeb-sd-4SB" secondAttribute="trailing" constant="8" id="43c-Ro-dRj"/>
+                                    <constraint firstItem="Eeb-sd-4SB" firstAttribute="top" secondItem="QFy-z8-4TL" secondAttribute="top" constant="8" id="JNz-qe-lQr"/>
+                                    <constraint firstItem="Eeb-sd-4SB" firstAttribute="leading" secondItem="QFy-z8-4TL" secondAttribute="leading" constant="8" id="S88-SM-0UC"/>
+                                    <constraint firstAttribute="bottom" secondItem="Eeb-sd-4SB" secondAttribute="bottom" constant="8" id="YWJ-j7-Nxj"/>
+                                    <constraint firstAttribute="height" constant="37" id="wxT-yC-fDR"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="JBZ-PW-qwD" firstAttribute="top" secondItem="v2h-dJ-8ht" secondAttribute="top" constant="8" id="0pO-NG-6ih"/>
                             <constraint firstAttribute="width" constant="355" id="3td-dH-mdx"/>
-                            <constraint firstAttribute="height" constant="78" id="EYO-lJ-YsN"/>
-                            <constraint firstItem="Eeb-sd-4SB" firstAttribute="top" secondItem="JBZ-PW-qwD" secondAttribute="bottom" constant="8" id="Ep1-54-QiF"/>
-                            <constraint firstAttribute="trailing" secondItem="Eeb-sd-4SB" secondAttribute="trailing" constant="8" id="Jeh-9e-AU4"/>
+                            <constraint firstItem="QFy-z8-4TL" firstAttribute="leading" secondItem="v2h-dJ-8ht" secondAttribute="leading" constant="8" id="40D-MI-nTe"/>
+                            <constraint firstItem="QFy-z8-4TL" firstAttribute="top" secondItem="JBZ-PW-qwD" secondAttribute="bottom" constant="8" id="CBQ-cR-s0R"/>
+                            <constraint firstAttribute="height" constant="98" id="EYO-lJ-YsN"/>
+                            <constraint firstAttribute="trailing" secondItem="QFy-z8-4TL" secondAttribute="trailing" constant="8" id="Nnh-o8-x78"/>
                             <constraint firstAttribute="trailing" secondItem="JBZ-PW-qwD" secondAttribute="trailing" constant="8" id="W7o-HJ-j74"/>
-                            <constraint firstItem="Eeb-sd-4SB" firstAttribute="leading" secondItem="v2h-dJ-8ht" secondAttribute="leading" constant="8" id="drY-2T-HDO"/>
-                            <constraint firstItem="JBZ-PW-qwD" firstAttribute="leading" secondItem="v2h-dJ-8ht" secondAttribute="leading" constant="8" id="oRw-m4-5NR"/>
-                            <constraint firstItem="Eeb-sd-4SB" firstAttribute="top" secondItem="JBZ-PW-qwD" secondAttribute="bottom" constant="8" id="vk5-cd-R3W"/>
+                            <constraint firstItem="JBZ-PW-qwD" firstAttribute="leading" secondItem="v2h-dJ-8ht" secondAttribute="leading" constant="12" id="oRw-m4-5NR"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -64,14 +73,15 @@
                 <constraint firstAttribute="trailing" secondItem="v2h-dJ-8ht" secondAttribute="trailing" id="rlY-FP-Of1"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <size key="customSize" width="355" height="50"/>
+            <size key="customSize" width="355" height="70"/>
             <connections>
                 <outlet property="heightConstraint" destination="EYO-lJ-YsN" id="v2N-nd-PbX"/>
                 <outlet property="lblTitle" destination="JBZ-PW-qwD" id="xxg-Xe-15V"/>
                 <outlet property="tfInput" destination="Eeb-sd-4SB" id="Eag-7H-pNc"/>
+                <outlet property="viewTFOuter" destination="QFy-z8-4TL" id="XcQ-ka-ZIY"/>
                 <outlet property="widthConstraint" destination="3td-dH-mdx" id="wm9-0K-R4T"/>
             </connections>
-            <point key="canvasLocation" x="45.5" y="32"/>
+            <point key="canvasLocation" x="45.5" y="42"/>
         </collectionViewCell>
     </objects>
 </document>
